<resources>
    <string name="os_licence_version_text">Version:</string>
    <string name="os_licence_licence_text">Licence:</string>
    <string name="apache_notice_licence_text">Apache Licence/Notice:</string>
    <string name="app_name">Taverna Mobile</string>
    <string name="hello_world">Empty</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_flash_screen">Taverna Mobile</string>
    <string name="brand">Powered By MyExperiment</string>
    <string-array name="menus">
        <item>Usage</item>
        <item>Quit</item>
    </string-array>
    <string name="hello_blank_fragment">About Workflow</string>
    <string name="login_info">Login</string>
    <string name="loginusername">Email or Username</string>
    <string name="loginpassword">Password</string>
    <string name="bLogin">Login</string>
    <string name="title_activity_dashboard_main">Dashboard</string>
    <string name="no_more_announcement_available">No More Announcement Available</string>
    <string name="failed_to_fetch_announcement">Failed to fetch announcement</string>
    <string name="ok">OK</string>
    <string name="title_explore">Workflows</string>
    <string name="title_usage">Usage</string>
    <string name="title_user_profile">Profile</string>
    <string name="title_about">About</string>
    <string name="title_exit">Logout</string>
    <string name="menu_search">Search</string>
    <string name="action_example">Example action</string>
    <string name="completebrand">Powered by
        <a href="http://taverna.incubator.apache.org">Apache Taverna</a>
    </string>
    <string name="search_hint">Search workflows by name</string>
    <string name="workflow_download">Download</string>
    <string name="workflow_read">View</string>
    <string name="workflow_mark">Favorite</string>
    <string name="workflow_authorhint">Workflow Author</string>
    <string name="workflow_component">Workflow component</string>
    <string name="favorite_empty">No Favorites Added Yet</string>
    <string name="workflow_empty">No
        <b>Workflows</b>
        Available. Pull down to refresh (or check your internet connection)
    </string>
    <string name="workflow_run_empty">
        <b>Workflows History</b>
        empty. No runs have been created for this workflow
    </string>
    <string name="wktitle">TITLE</string>
    <string name="marked">Marked On</string>
    <string name="workflow_type_text">Type: %1$s</string>
    <string name="workflow_author">Uploaded by:</string>
    <string name="created">Created: %1$s</string>
    <string name="modified">Modified :</string>
    <string name="description">Workflow Description</string>
    <string name="title_activity_workflow_detail">Workflow Detail</string>
    <string name="detail_title_section1">Workflow</string>
    <string name="detail_title_section2">Run History</string>
    <string name="detail_title_section3">Licence | Policy</string>
    <string name="detail_title_section4">About</string>
    <string name="play_workflow">Create Run</string>
    <string name="err_workflow_conn">Unable to fetch latest workflows. Please check your network
        connection
    </string>
    <string name="downloadfailed">Download Failed. Please try again</string>
    <string name="downloadprogress">Workflow download in progress</string>
    <string name="downloaderror">Unable to start Download. Please check your internet connection
    </string>
    <string name="downloadduplicate">Already Downloading</string>
    <string name="downloadcomplete">download complete</string>
    <string name="seemore">More Info &amp;raquo</string>
    <string name="loading">Loading details</string>
    <string name="loadworkflows">Loading Workflows</string>
    <string name="fetchrun">Fetching run components</string>
    <string name="keeplogin">Remain Logged-in</string>
    <string name="create_an_account">Create a myExperiment account</string>
    <string name="emailerr">Username must not be empty</string>
    <string name="passworderr">Password must not be empty</string>
    <string name="version_number">v1.0</string>
    <string name="about">Mobile Application for managing Taverna workflows.\n\nCopyright © 2015&#8211;2019
        The Apache Software Foundation, Licensed under the Apache License, Version 2.0.
    </string>
    <string name="about2">View, run and download workflows on your Android mobile device.</string>
    <string name="about3">Originally developed during Google Summer of Code 2015 for the<a href="http://taverna.incubator.apache.org">Apache Taverna project</a>.
    </string>
    <string name="pref_category_title_player_config">Configure Player Account</string>
    <string name="pref_summary_player_user">Username used to login to Taverna player portal</string>
    <string name="pref_title_player_user">Username/email</string>
    <string name="pref_title_player_pass">Password</string>
    <string name="pref_title_myexperiment_user">Username/email</string>
    <string name="servererr">Server error. Please try again later</string>
    <string name="auth_err">Invalid login credentials</string>
    <string name="pref_category_title_myexperiment">Configure MyExperiment Account</string>
    <string name="pref_summary_myexperiment_user">Username used to login to MyExperiment</string>
    <string name="title_activity_run_result">Workflow Run Result</string>
    <string name="runstarted">Run Started</string>
    <string name="run_finishtime">Run finish Time</string>
    <string name="usage_intro">Usage | Login</string>
    <string name="usage_login_accounts">When the app is started you are initially prompted with an
        accounts page to login. Use Your myExperiment account to login. You will need to configure a
        Taverna player account in the settings when you have successfully logged-in to the app. you
        can also choose to remain logged-in or not from the login page.
    </string>
    <string name="usage_dashboard">Usage | Dashboard</string>
    <string name="usage_dashboard_Text">Once logged-in to the app, a stream of workflows appears as
        a stream from which you could view, mark workflows for offline viewing. There are two tabs
        on the dashboard, the second tab presents a list of marked workflows. there is a menu button
        the pulls out a navigation drawer menu from the left corner of the dashboard. You can also
        swipe finger from the extreme left of the screen to pull out the menu. Scrolling to the
        bottom of the workflow screen will load more workflows. You can pull down to refresh
        workflows for the initial workflow list. the search bar is used to fetch amongst currently
        loaded workflows.
    </string>
    <string name="usage_menus">Usage | Menus</string>
    <string name="usage_menu_Text">The navigation drawer brings up a menu. The workflow menu item
        allows one to quickly return to the workflow streams page from any screen. The \'Open
        Workflow\' item allows users to pick a valid workflow from external storage and run it
        against a Taverna Server through a Taverna Player. Settings allow user to configure player
        accounts and portal urls. Logout allows users to log-out of the app.
    </string>
    <string name="usage_detail">Usage | Workfow Detail</string>
    <string name="usage_detail_text">The details screen allows users to run particular worklows and
        provides detailed information about the workflows. Workflows can also be downloaded from
        here. Workflows can also be marked from this screen which would save much more data for
        offline use than on the dashboard screen. This screen also provides a set of runs for the
        workflow from other users.
    </string>
    <string name="runid_text">Workflow Run ID:</string>
    <string name="announcement">Announcementss</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="licence">Licence</string>
    <string name="no_favourite_workflow_found">No Favourite Workflow Found !</string>
    <string name="image_zoom">Image Zoom</string>
    <string name="hint_email">Email or Username</string>
    <string name="hint_email_player">Email</string>
    <string name="hint_password">Password</string>
    <string name="login_button_description">Login Button</string>
    <string name="err_login_email">Enter valid email</string>
    <string name="err_login_password">Enter valid password</string>
    <string name="error_failed_to_fetch_workflow">Failed to fetch Workflow</string>
    <string name="no_more_workflows_avialable">No more workflows avialable</string>
    <string name="no_workflows_found">No Workflows Found</string>
    <string name="no_my_workflow">You have not created any workflow yet !</string>
    <string name="error_vaild_credential">Please enter valid credential</string>
    <string name="t2_workflow_type">Taverna 2</string>
    <string-array name="player_run_slider_view_labels">
        <item>Player \nLogin</item>
        <item>Download</item>
        <item>Upload</item>
        <item>Inputs &amp;\nRun</item>
    </string-array>
    <string name="downloading_workflow_lable">Downloading Workflow</string>
    <string name="uploading_workflow_lable">Uploading Workflow</string>
    <string name="please_wait">Please Wait ...</string>
    <string name="headline_taverna_player_portal_login">Taverna Player Portal Login</string>
    <string name="button_text_login">Login</string>
    <string name="sign_out_conformation">Sign Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_message">Do you really want to sign out?</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_key_logged_in">pref_logged_in</string>
    <string name="pref_remainLogged_in">Remain Logged-in</string>
    <string name="pref_login_description">Decide whether or not to be automatically logged-in when the app starts</string>
    <string name="pref_player_default"> http://heater.cs.man.ac.uk:3000/</string>
    <string name="pref_player_title">Configure Taverna player portal</string>
    <string name="pref_player_des">Configure a different player URL for the app to use. End with the mount point(/)</string>
    <string name="pref_server_default"> http://heater.cs.man.ac.uk:8090/</string>
    <string name="pref_server_title">Configure Taverna Server </string>
    <string name="pref_server_des">Configure a different Taverna Server for the app</string>
    <string name="title_nav_all_workflows">All Workflows</string>
    <string name="title_nav_favourite_workflows">Favourite Workflows</string>
    <string name="title_nav_announcement">Announcement</string>
    <string name="title_nav_settings">Settings</string>
    <string name="tiitle_nav_logout">Logout</string>
    <string name="title_nav_usage">Usage</string>
    <string name="title_nav_about">About</string>
    <string name="title_nav_my_workflows">My Workflows</string>
    <string name="title_nav_os_licences">Licence info</string>
    <string name="title_nav_apache_licences">Apache Licence/Notice</string>
    <string name="msg_no_workflow_found">No matching criteria workflow found</string>
    <string name="pref_key_player_url">pref_player_url</string>
    <string name="pref_key_player_user">pref_key_player_user</string>
    <string name="pref_key_player_password">pref_key_player_password</string>
    <string name="pref_summary_player_pass">Taverna Player Password</string>
    <string name="pref_key_myexperiment_user">pref_myexperimentuser</string>
    <string name="pref_key_myexperiment_pass">pref_myexperimentpass</string>
    <string name="pref_summary_myexperiment_pass">Myexperiment password</string>
    <string name="disclaimer_title">Disclaimer:</string>
</resources>