<!--
    Apache Taverna Mobile
    Copyright 2016 The Apache Software Foundation

    This product includes software developed at
    The Apache Software Foundation (http://www.apache.org/).

    Licensed to the Apache Software Foundation (ASF) under one
    or more contributor license agreements. See the NOTICE file
    distributed with this work for additional information
    regarding copyright ownership. The ASF licenses this file
    to you under the Apache License, Version 2.0 (the
    "License"); you may not use this file except in compliance
    with the License. You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing,
    software distributed under the License is distributed on an
    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
    KIND, either express or implied. See the License for the
    specific language governing permissions and limitations
    under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pref_key_logged_in"
        android:summary="@string/pref_login_description"
        android:title="@string/pref_remainLogged_in" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_player_default"
        android:inputType="textCapWords"
        android:key="@string/pref_key_player_url"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/pref_player_des"
        android:title="@string/pref_player_title" />
    <!--  <EditTextPreference
         android:key="pref_server_url"
         android:title="@string/pref_server_title"
         android:summary="@string/pref_server_des"
         android:defaultValue="@string/pref_server_default"
         android:selectAllOnFocus="true"
         android:inputType="textCapWords"
         android:capitalize="words"
         android:singleLine="true"
         android:maxLines="1" /> -->
    <PreferenceCategory
        android:icon="@drawable/gear_icon"
        android:title="@string/pref_category_title_player_config">
        <EditTextPreference
            android:defaultValue="default"
            android:icon="@mipmap/ic_user_profiles"
            android:inputType="textEmailAddress|textPersonName"
            android:key="@string/pref_key_player_user"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_summary_player_user"
            android:title="@string/pref_title_player_user" />
        <EditTextPreference
            android:defaultValue="default"
            android:icon="@android:drawable/ic_secure"
            android:inputType="textPassword"
            android:key="pref_key_player_password"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_summary_player_pass"
            android:title="@string/pref_title_player_pass" />
    </PreferenceCategory>
    <PreferenceCategory
        android:icon="@drawable/gear_icon"
        android:title="@string/pref_category_title_myexperiment">
        <EditTextPreference
            android:defaultValue="default"
            android:icon="@mipmap/ic_user_profiles"
            android:inputType="textEmailAddress|textPersonName"
            android:key="@string/pref_key_myexperiment_user"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_summary_myexperiment_user"
            android:title="@string/pref_title_myexperiment_user" />
        <EditTextPreference
            android:defaultValue="default"
            android:icon="@android:drawable/ic_secure"
            android:inputType="textPassword"
            android:key="@string/pref_key_myexperiment_pass"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_summary_myexperiment_pass"
            android:title="@string/pref_title_player_pass" />
    </PreferenceCategory>

</PreferenceScreen>
