<!--
Apache Taverna Mobile
Copyright 2015 The Apache Software Foundation
This product includes software developed at
The Apache Software Foundation (http://www.apache.org/).

Licensed to the Apache Software Foundation (ASF) under one or more
contributor license agreements. See the NOTICE file distributed with
this work for additional information regarding copyright ownership.
The ASF licenses this file to You under the Apache License, Version 2.0
(the "License"); you may not use this file except in compliance with
the License. You may obtain a copy of the License at
http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.apache.taverna.mobile.activities.WorkflowDetailActivity$PlaceholderFragment"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@color/button_material_light">

    <TextView android:id="@+id/wkf_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:typeface="serif"
        android:textStyle="italic"
        android:textSize="22sp"
        android:text="@string/workflow_authorhint" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/scrollView"
        android:layout_weight="1" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/wtitle"
                android:layout_marginTop="5dp"
                android:hint="@string/detail_title_section1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/wcreatedat"
                android:layout_marginTop="5dp"
                android:text="@string/created" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/wupdatedat"
                android:layout_marginTop="5dp"
                android:text="@string/modified" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/wdescription"
                android:layout_marginTop="5dp"
                android:minLines="3"
                android:hint="@string/description" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/wkf_image"
                android:src="@mipmap/ic_loading"
                android:backgroundTint="@color/accent_material_light"
                android:backgroundTintMode="src_atop" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/actionLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:layout_weight="0.33"
            android:background="#33b5e5"
            style="android:buttonBarButtonStyle"
            android:text="@string/play_workflow"
            android:drawableLeft="@android:drawable/ic_menu_edit"
            android:id="@+id/run_wk" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:layout_weight="0.33"
            android:background="#33b5e5"
            style="android:buttonBarButtonStyle"
            android:text="@string/workflow_download"
            android:drawableLeft="@drawable/download"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:id="@+id/download_wk" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:layout_weight="0.33"
            android:background="#33b5e5"
            style="android:buttonBarButtonStyle"
            android:text="@string/workflow_mark"
            android:drawableLeft="@android:drawable/btn_star_big_off"
            android:id="@+id/mark_wk" />
    </LinearLayout>

</LinearLayout>
